# caldera-render-graph

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  TODO.md  conanfile.txt  conanfile_examples.txt
docs/: CMakeLists.txt  Doxyfile.cfg
example/: CMakeLists.txt
example/include/: buffer.h  descriptor.h  device.h  frame.h  image.h  memory.h  mesh.h  pipeline.h  renderer.h  scheduler.h  shader.h  swapchain.h  vulkan_include.h  window.h
example/include/shaders/: basic.frag.hpp  basic.vert.hpp
example/src/: buffer.cpp  descriptor.cpp  device.cpp  frame.cpp  image.cpp  main.cpp  memory.cpp  pipeline.cpp  renderer.cpp  scheduler.cpp  shader.cpp  swapchain.cpp  window.cpp
examples/common/: CMakeLists.txt  ShaderCompile.cmake
examples/common/include/caldera-examples-common/: buffer.h  config.h  descriptor.h  device.h  frame.h  image.h  memory.h  mesh.h  pipeline.h  renderer.h  scheduler.h  shader.h  swapchain.h  window.h
examples/common/src/: buffer.cpp  descriptor.cpp  device.cpp  frame.cpp  image.cpp  memory.cpp  pipeline.cpp  renderer.cpp  scheduler.cpp  shader.cpp  swapchain.cpp  window.cpp
examples/rotating-cube/: CMakeLists.txt  README.md
examples/rotating-cube/shaders/: basic.vert
examples/rotating-cube/src/: main.cpp
examples/simulation/: CMakeLists.txt  README.md
examples/simulation/include/caldera-examples-simulation/: descriptors.h  graphics.h  pipeline.h  simulation.h
examples/simulation/shaders/: gravity_simulation.comp  simulation.frag  simulation.vert
examples/simulation/src/: descriptors.cpp  graphics.cpp  main.cpp  pipeline.cpp
render-graph/: CMakeLists.txt
render-graph/include/: config.h  graph.h  pass.h  resource.h
render-graph/include/caldera-render-graph/: config.h  graph.h  pass.h  resource.h  scheduler.h
render-graph/src/: graph.cpp  pass.cpp  scheduler.cpp
